@@ -103,6 +103,33 @@ public class AllTests
         }
 
         {
+            Test.Struct4 v = new Test.Struct4();
+            test(!v.boolFalse);
+            test(v.boolTrue);
+            test(v.b == 1);
+            test(v.s == 2);
+            test(v.i == 3);
+            test(v.l == 4);
+            test(v.f == 5.1F);
+            test(v.d == 6.2);
+            //test(v.str.Equals("foo \\ \"bar\n \r\n\t\u000b\f\u0007\b? \u0007 \u0007"));
+            //test(v.str.Equals("foo bar"));
+            test(v.c1 == Test.Color.red);
+            test(v.c2 == Test.Color.green);
+            test(v.c3 == Test.Color.blue);
+            test(v.nc1 == Test.Nested.Color.red);
+            test(v.nc2 == Test.Nested.Color.green);
+            test(v.nc3 == Test.Nested.Color.blue);
+            //test(v.noDefault == null);
+            test(v.zeroI == 0);
+            test(v.zeroL == 0);
+            test(v.zeroF == 0);
+            test(v.zeroDotF == 0);
+            test(v.zeroD == 0);
+            test(v.zeroDotD == 0);
+        }
+
+        {
             Test.Base v = new Test.Base();
             test(!v.boolFalse);
             test(v.boolTrue);
